2011-04-21  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gc_priv.h (_GNU_SOURCE): Revert one of the
	recent patches regarding this macro as the macro should be set
	(to 1) before including any other system header.

2011-04-21  Ivan Maidanski  <ivmai@mail.ru>

	* doc/README.environment (GC_INITIAL_HEAP_SIZE,
	GC_MAXIMUM_HEAP_SIZE): Update.

2011-04-20  Ivan Maidanski  <ivmai@mail.ru>

	* misc.c (GC_parse_mem_size_arg): Allow 'k', 'M', 'G' suffixes in
	heap size specifier; return 0 if not a valid one.
	* include/gc_cpp.h: Explicitly define inline one-argument delete
	operator for Cygwin (as a workaround).
	* include/gc_cpp.h: Reformat the code.
	* tests/test_cpp.cc: Ditto.
	* tests/test_cpp.cc (main): Suppress compiler warnings about
	"assigned value is unused".

2011-04-19  Ivan Maidanski  <ivmai@mail.ru>

	* misc.c (GC_parse_mem_size_arg): New function.
	* misc.c (GC_init): Use GC_parse_mem_size_arg().
	* pthread_stop_world.c (tkill): Declare for Android.

2011-04-19  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gc_priv.h (_GNU_SOURCE): Include features.h
	first (except for NaCl) and then define the macro to 1 if not yet.

2011-04-18  Ivan Maidanski  <ivmai@mail.ru> (really Ludovic Courtes)

	* tests/tests.am (TESTS, check_PROGRAMS): Add
	'initsecondarythread'.
	* tests/tests.am (initsecondarythread_SOURCES,
	initsecondarythread_LDADD): New variable.
	* Makefile.in: Regenerate.
	* configure: Ditto.

2011-04-18  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_store_debug_info_inner): Always define; add
	"const" to its string argument.
	* dbg_mlc.c (GC_store_debug_info): Call GC_store_debug_info_inner.
	* dbg_mlc.c (GC_debug_free): Set GC_have_errors in case of
	smashed or previously deallocated found.
	* dbg_mlc.c (GC_check_heap_block): Replace while loop with a for
	one.
	* reclaim.c (GC_reclaim_check): Ditto.
	* dbg_mlc.c (GC_check_heap_proc): Remove redundant cast to word.
	* os_dep.c (GC_get_stack_base): Don't initialize