@@ -1,3 +1,13 @@
+2011-04-22  Ivan Maidanski  <ivmai@mail.ru>
+
+	* os_dep.c (GC_get_stack_base): Implement for Android (same as
+	for Linux).
+	* pthread_support.c (GC_get_nprocs): Return 1 (instead of -1) if
+	failed to open "stat" file (not to issue a warning twice); update
+	the comment.
+	* pthread_support.c (GC_thr_init): Call sysconf() on Android to
+	get the number of CPUs.
+
 2011-04-21  Ivan Maidanski  <ivmai@mail.ru>
 
 	* include/private/gc_priv.h (_GNU_SOURCE): Revert one of the
